--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <span class="text-muted">Data</span>
                     </h4>
 
-                    <table class="table table-bordered table-sm">
+                    <table class="table table-bordered table-sm" id="adc-data-table">
                         <thead class="table-dark">
                             <tr>
                                 <th width="50%">Alcohol Percentage</th>
@@ -38,54 +38,55 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><input type="number" min="0" step="0.01" class="form-control" placeholder="%" value="0.10"></td>
-                                <td><input type="number" class="form-control" placeholder="0.01"></td>
+                                <td><input type="number" min="0" step="0.01" class="form-control alcohol-percentage" placeholder="%" value="0.10"></td>
+                                <td><input type="number" class="form-control raw-reading" placeholder="0.01"></td>
                             </tr>
                             <tr>
-                                <td><input type="number" min="0" step="0.01" class="form-control" placeholder="%" value="0.10"></td>
-                                <td><input type="number" class="form-control" placeholder="0.01"></td>
+                                <td><input type="number" min="0" step="0.01" class="form-control alcohol-percentage" placeholder="%" value="0.10"></td>
+                                <td><input type="number" class="form-control raw-reading" placeholder="0.01"></td>
                             </tr>
                             <tr>
-                                <td><input type="number" min="0" step="0.01" class="form-control" placeholder="%" value="0.25"></td>
-                                <td><input type="number" class="form-control" placeholder="0.01"></td>
+                                <td><input type="number" min="0" step="0.01" class="form-control alcohol-percentage" placeholder="%" value="0.25"></td>
+                                <td><input type="number" class="form-control raw-reading" placeholder="0.01"></td>
                             </tr>
                             <tr>
-                                <td><input type="number" min="0" step="0.01" class="form-control" placeholder="%" value="0.25"></td>
-                                <td><input type="number" class="form-control" placeholder="0.01"></td>
+                                <td><input type="number" min="0" step="0.01" class="form-control alcohol-percentage" placeholder="%" value="0.25"></td>
+                                <td><input type="number" class="form-control raw-reading" placeholder="0.01"></td>
                             </tr>
                             <tr>
-                                <td><input type="number" min="0" step="0.01" class="form-control" placeholder="%" value="0.50"></td>
-                                <td><input type="number" class="form-control" placeholder="0.01"></td>
+                                <td><input type="number" min="0" step="0.01" class="form-control alcohol-percentage" placeholder="%" value="0.50"></td>
+                                <td><input type="number" class="form-control raw-reading" placeholder="0.01"></td>
                             </tr>
                             <tr>
-                                <td><input type="number" min="0" step="0.01" class="form-control" placeholder="%" value="0.50"></td>
-                                <td><input type="number" class="form-control" placeholder="0.01"></td>
+                                <td><input type="number" min="0" step="0.01" class="form-control alcohol-percentage" placeholder="%" value="0.50"></td>
+                                <td><input type="number" class="form-control raw-reading" placeholder="0.01"></td>
                             </tr>
                             <tr>
-                                <td><input type="number" min="0" step="0.01" class="form-control" placeholder="%" value="1.00"></td>
-                                <td><input type="number" class="form-control" placeholder="0.01"></td>
+                                <td><input type="number" min="0" step="0.01" class="form-control alcohol-percentage" placeholder="%" value="1.00"></td>
+                                <td><input type="number" class="form-control raw-reading" placeholder="0.01"></td>
                             </tr>
                             <tr>
-                                <td><input type="number" min="0" step="0.01" class="form-control" placeholder="%" value="1.00"></td>
-                                <td><input type="number" class="form-control" placeholder="0.01"></td>
+                                <td><input type="number" min="0" step="0.01" class="form-control alcohol-percentage" placeholder="%" value="1.00"></td>
+                                <td><input type="number" class="form-control raw-reading" placeholder="0.01"></td>
                             </tr>
                             <tr>
-                                <td><input type="number" min="0" step="0.01" class="form-control" placeholder="%" value="2.00"></td>
-                                <td><input type="number" class="form-control" placeholder="0.01"></td>
+                                <td><input type="number" min="0" step="0.01" class="form-control alcohol-percentage" placeholder="%" value="2.00"></td>
+                                <td><input type="number" class="form-control raw-reading" placeholder="0.01"></td>
                             </tr>
                             <tr>
-                                <td><input type="number" min="0" step="0.01" class="form-control" placeholder="%" value="2.00"></td>
-                                <td><input type="number" class="form-control" placeholder="0.01"></td>
+                                <td><input type="number" min="0" step="0.01" class="form-control alcohol-percentage" placeholder="%" value="2.00"></td>
+                                <td><input type="number" class="form-control raw-reading" placeholder="0.01"></td>
                             </tr>
                         </tbody>
                     </table>
 
                     <form class="card p-2">
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="0.01">
-                            <button type="submit" class="btn btn-secondary">CALCULATE</button>
+                            <input type="number" class="form-control" id="calculation-raw" placeholder="0.01">
+                            <button type="button" class="btn btn-secondary" onclick="calculateAlcoholPercentage()">CALCULATE</button>
                         </div>
                     </form>
+                    <h1 id="calculation-result"></h1>
                 </div>
             </div>
         </main>
@@ -97,8 +98,9 @@
 
     <script type="text/javascript" src="assets/js/regression_js/regression.min.js"></script>
     <script type="text/javascript" src="assets/js/regression_js/d3.legend.js"></script>
-    <script type="text/javascript" src="assets/js/regression_js/scatterchart.js"></script>
+    <!--<script type="text/javascript" src="assets/js/regression_js/scatterchart.js"></script>-->
 
-    <script type="text/javascript" src="assets/js/main-script.js"></script>
+
+    <script type="text/javascript" language="javascript" src="assets/js/main-script.js"></script>
 </body>
 </html>
