--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                     <form class="card p-2 my-2 needs-validation">
                         <div class="input-group">
-                            <input type="number" class="form-control" id="calculation-raw" placeholder="0.01" required >
+                            <input type="number" class="form-control" id="calculation-raw" placeholder="0.01" tabindex="11" required >
                             <button type="button" class="btn btn-success" id="calculation-btn" onclick="calculateAlcoholPercentage()">CALCULATE</button>
                         </div>
                     </form>
